--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "axios": "^0.21.1",
     "commander": "^7.1.0",
     "fuzzy-search": "^3.2.1",
-    "iconv-lite": "^0.6.2",
     "inquirer": "^8.0.0",
     "inquirer-autocomplete-prompt": "^1.3.0",
-    "terminal-kit": "^2.0.5"
+    "term-kit": "^2.0.5"
   },
   "scripts": {
     "postversion": "git push --tags"
