--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "author": "JR <jakob.reiter@theventury.com>",
   "license": "MIT",
-  "bin": "node index.js",
+  "bin": {
+    "oebb-watcher": "./index.js"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "commander": "^7.1.0",
@@ -14,6 +16,8 @@
     "term-kit": "^2.0.5"
   },
   "scripts": {
+    "start": "node index.js",
+    "install-global": "yarn global add ./",
     "postversion": "git push --tags"
   }
 }
